Fixed a Few Bugs

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <div class="header-text">
           <p>Computer Science Student</p>
-          <h1>Hi, I'm <span>Kenneth</span> Maeda from UCONN</h1>
+          <h1>Hi, I'm <span>Kenneth</span> Maeda :)</h1>
         </div>
       </div>
     </div>
@@ -166,11 +166,13 @@
         <a href="#header" class="btn">Return Home</a>
       </div>
     </div>
+
     <div id="contact">
       <div class="container">
         <div class="row">
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
+            <h8>The Submittion Button Is Unavailable</h8>
             <p>
               <i class="fas fa-paper-plane"></i> Email:
               Kenneth.Maeda@outlook.com
@@ -189,7 +191,7 @@
                 >https://github.com/NoVaxi0n</a
               >
             </p>
-            <a href="images/Resume-PDF.pdf" download class="btn btn2"
+            <a href="images/Resume_PDF.pdf" download class="btn btn2"
               >Download Resume</a
             >
           </div>
