Fixed a Few Bugs

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
             </p>
             <p>
               Let's connect and explore how we can drive technological progress
-              together! P.S. I love cats and enjoy exploring new challenges.
+              together!
             </p>
+            <p>P.S. I love cats and enjoy exploring new challenges.</p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
                 Skills
