--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/e313173242.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
   </head>
   <body>
     <header id="header">
@@ -184,20 +184,16 @@
               <i class="fas fa-paper-plane"></i> Email:
               Kenneth.Maeda@outlook.com
             </p>
-            <p>
-              <i class="fa-brands fa-linkedin"></i> Linkedin:
-              <a
-                href="https://www.linkedin.com/in/kenneth-maeda"
-                target="_blank"
-                >www.linkedin.com/in/kenneth-maeda</a
-              >
-            </p>
-            <p>
-              <i class="fa-brands fa-github"></i> Github:
-              <a href="https://github.com/NoVaxi0n" target="_blank"
-                >https://github.com/NoVaxi0n</a
-              >
-            </p>
+
+            <div class="social-icons">
+              <a href="https://www.linkedin.com/in/kenneth-maeda/"
+                ><i class="fa fa-brands fa-linkedin"></i
+              ></a>
+              <a href="https://github.com/NoVaxi0n"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+            </div>
+
             <a href="images/Resume_PDF.pdf" download class="btn btn2"
               >Download Resume</a
             >
@@ -248,7 +244,8 @@
       }
     </script>
     <script>
-      const scriptURL = "my_actual_app_script_link_here"; // Update this script link as it's broken
+      const scriptURL =
+        "https://script.google.com/macros/s/AKfycbwAKLZsn2AFG6hDJT9N1SCzdLR9AekqhpJf5tMyDcfrWK0AWjUJFjaOmottpnClL0u-/exec"; // Update this script link as it's broken
       const form = document.forms["submit-to-google-sheet"];
       const msg = document.getElementById("msg");
 
