Updated Email Sub-Section

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
             <p>
-              <i class="fas fa-paper-plane"></i> Email:
-              Kenneth.Maeda@outlook.com
+              <i class="fas fa-paper-plane"></i> 
+              KENNETH.MAEDA@OUTLOOK.COM
             </p>
 
             <div class="social-icons">
