Adding Additional Information

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Hello again! I am a highly motivated and driven Computer Science
-              student at the University of Connecticut. As a first-generation
-              college student, breaking into the world of technology has been
-              quite the ride. I started off with little knowledge but was lucky
-              to have friends around who could mentor me through the process.
+              Hello again! As you may see, yeah I'm upside down in the photo but
+              I love being silly. I am a highly motivated and driven Computer
+              Science student at the University of Connecticut. As a
+              first-generation college student, breaking into the world of
+              technology has been quite the ride. I started off with little
+              knowledge but was lucky to have friends around who could mentor me
+              through the process.
             </p>
             <p>
               I am currently pursuing interests in Computational Data Analytics,
@@ -180,7 +182,7 @@
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
             <p>
-              <i class="fas fa-paper-plane"></i> 
+              <i class="fas fa-paper-plane"></i>
               KENNETH.MAEDA@OUTLOOK.COM
             </p>
 
