More silly Information

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Hello again! As you may see, yeah I'm upside down in the photo but
-              I love being silly. I am a highly motivated and driven Computer
-              Science student at the University of Connecticut. As a
-              first-generation college student, breaking into the world of
+              Hello again! As you may see, yeah I'm upside down in the photo and
+              I have my dog, Bianca, as the background. Seem out of place but I
+              enjoy being silly. Besides that, I am a highly motivated and
+              driven Computer Science student at the University of Connecticut.
+              As a first-generation college student, breaking into the world of
               technology has been quite the ride. I started off with little
               knowledge but was lucky to have friends around who could mentor me
               through the process.
