Shifted Tex Around

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-          <p>Computer Science Student</p>
-          <h1>Hi, I'm <span>Kenneth</span> Maeda :)</h1>
+          <h1>Hi, I'm <span>Kenneth Maeda</span> :)</h1>
+          <p>A Computer Science Student</p>
         </div>
       </div>
     </header>
