Added Future Plans and Projects

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
               <p class="tab-links" onclick="opentab('extracurricular')">
                 Extracurricular
               </p>
+              <p class="tab-links" onclick="opentab('upcoming-goals')">
+                Upcoming Goals
+              </p>
             </div>
             <div class="tab-contents active-tab" id="skills">
               <ul>
@@ -87,7 +90,7 @@
                 </li>
                 <li>
                   <span>Cloud Computing</span><br />Utilizing Google Cloud for
-                  scalable solutions. Currently learning AWS.
+                  scalable solutions.
                 </li>
                 <li>
                   <span>Team Collaboration</span><br />Working effectively in
@@ -98,19 +101,48 @@
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
-                  <span>July 2024 - Present</span><br />Headstarter Fellowship
-                  Student
+                  <span>July 2024 - Present</span><br /><strong
+                    >Fellowship Student</strong
+                  >
+
+                  <p>
+                    Engaged in an fellowship program, focusing on developing
+                    practical skills in software development and project
+                    management through hands-on projects and team collaboration.
+                  </p>
                 </li>
                 <li>
-                  <span>June 2024 - Present</span><br />Codepath TIP 102 Student
+                  <span>June 2024 - August 2024</span><br /><strong
+                    >TIP 102 Student</strong
+                  >
+                  <p>
+                    Participating in a technical interview preparation course,
+                    gaining proficiency in data structures, algorithms, and
+                    problem-solving techniques essential for succeeding in
+                    competitive coding interviews.
+                  </p>
                 </li>
                 <li>
-                  <span>February 2024 - May 2024</span><br />Codepath
-                  Introduction to Cybersecurity Student
+                  <span>February 2024 - May 2024</span><br /><strong>
+                    Introduction to Cybersecurity Student
+                  </strong>
+                  <p>
+                    A comprehensive introductory course on cybersecurity,
+                    covering key concepts such as network security,
+                    cryptography, and risk management to build a strong
+                    foundation in protecting information systems.
+                  </p>
                 </li>
                 <li>
-                  <span>January 2024 - May 2024</span><br />Sentiment Analysis
-                  at UCONN
+                  <span>January 2024 - May 2024</span><br /><strong
+                    >Analysis at UCONN</strong
+                  >
+                  <p>
+                    Conducted a research project on sentiment analysis,
+                    utilizing natural language processing techniques to analyze
+                    and interpret the emotional tone of textual data from
+                    various sources.
+                  </p>
                 </li>
               </ul>
             </div>
@@ -129,8 +161,74 @@
             <div class="tab-contents" id="extracurricular">
               <ul>
                 <li>
-                  <span>January 2024 - Present</span><br />Engineering
-                  Ambassador
+                  <span>January 2024 - Present</span><br /><strong>
+                    Engineering Ambassador</strong
+                  >
+                  <p>
+                    Serving as a liaison between the engineering department and
+                    prospective students, providing tours, and sharing personal
+                    experiences to inspire and inform future engineers about
+                    academic and career opportunities.
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="upcoming-goals">
+              <ul>
+                <li>
+                  <span>August 2024 - September 2024</span>
+                  <div class="goal-detail">
+                    <strong
+                      >Complete AWS Certified Cloud Practitioner Course</strong
+                    >
+
+                    <p>
+                      This certification will bolster my cloud computing skills,
+                      essential for my upcoming projects and professional growth
+                      in tech.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <span>August 2024 - January 2025</span>
+                  <div class="goal-detail">
+                    <strong>Complete Code The Dream Program</strong>
+                    <p>
+                      Preparing for advanced software development tasks, this
+                      intensive program will refine my programming skills and
+                      project management capabilities.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <span>September 2024 - October 2024</span>
+                  <div class="goal-detail">
+                    <strong>Complete CMMC Professional Certification</strong>
+
+                    <p>
+                      Enhancing my cybersecurity credentials to align with the
+                      latest standards in managing controlled unclassified
+                      information in non-federal systems.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <span>TBD</span>
+                  <div class="goal-detail">
+                    <strong>Upcoming Learning Goals:</strong>
+                    <ul style="list-style-type: disc; margin-left: 20px">
+                      <li>◦ Generative AI Course</li>
+                      <li>◦ Google Cybersecurity Certification</li>
+                      <li>
+                        ◦ CompTIA Certifications (Security+, Network+, Server+,
+                        A+)
+                      </li>
+                      <li>◦ Google Project Management Certification</li>
+                      <li>◦ Certified CMMC Assessor Certification</li>
+                      <li>◦ IC2 Cybersecurity</li>
+                      <li>◦ CodePath TIP 103</li>
+                    </ul>
+                  </div>
                 </li>
               </ul>
             </div>
@@ -145,20 +243,25 @@
           <div class="work">
             <img src="images/project-1.png" alt="Password Manager Project" />
             <div class="layer">
-              <h3>Password Manager</h3>
+              <h3>Microblog</h3>
               <p>
-                In Progress: Engineering a Django-based password manager with
-                advanced encryption protocols for robust data protection.
+                A web application (runs on local) using Flask to explore
+                handling user passwords with advanced encryption protocols for
+                robust data protection.
               </p>
             </div>
           </div>
           <div class="work">
             <img src="images/project-2.png" alt="Future Project" />
             <div class="layer">
-              <h3>Future Project</h3>
+              <h3>Pantry Tracker</h3>
               <p>
-                This is a filler as there are no ongoing projects. If so, I'll
-                replace this slot.
+                This web application (runs on locall), built with Next.js,
+                Firebase, and Material UI, helps users manage pantry items
+                efficiently. Users can add, update, and remove items with
+                real-time synchronization via Firebase Firestore. The interface,
+                designed with Material UI, offers a clean and user-friendly
+                experience.
               </p>
             </div>
           </div>
