--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
             <div class="layer">
               <h3>Microblog</h3>
               <p>
-                A web application (runs on local) using Flask to explore
-                handling user passwords with advanced encryption protocols for
-                robust data protection.
+                A web application (runs locally) using Flask to explore handling
+                user passwords with advanced encryption protocols for robust
+                data protection.
               </p>
             </div>
           </div>
@@ -256,7 +256,7 @@
             <div class="layer">
               <h3>Pantry Tracker</h3>
               <p>
-                This web application (runs on locall), built with Next.js,
+                This web application (runs locally), built with Next.js,
                 Firebase, and Material UI, helps users manage pantry items
                 efficiently. Users can add, update, and remove items with
                 real-time synchronization via Firebase Firestore. The interface,
