--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="header-text">
           <h1>Hi, I'm <span>Kenneth Maeda</span> :)</h1>
-          <p>A Computer Science Student</p>
+          <p>Pursuing in Computer Science Major and a Minor in Economics</p>
         </div>
       </div>
     </header>
