--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <ul>
                 <li>
                   <span>July 2024 - Present</span><br /><strong
-                    >Fellowship Student</strong
+                    >Headstarter Fellowship Student</strong
                   >
 
                   <p>
@@ -122,7 +122,7 @@
                 </li>
                 <li>
                   <span>June 2024 - August 2024</span><br /><strong
-                    >TIP 102 Student</strong
+                    >Codepath TIP 102 Student</strong
                   >
                   <p>
                     Participating in a technical interview preparation course,
@@ -144,7 +144,7 @@
                 </li>
                 <li>
                   <span>January 2024 - May 2024</span><br /><strong
-                    >Analysis at UCONN</strong
+                    >Sentiment Analysis at UCONN</strong
                   >
                   <p>
                     Conducted a research project on sentiment analysis,
@@ -171,7 +171,7 @@
               <ul>
                 <li>
                   <span>January 2024 - Present</span><br /><strong>
-                    Engineering Ambassador</strong
+                    UCONN Engineering Ambassador</strong
                   >
                   <p>
                     Serving as a liaison between the engineering department and
