--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </li>
                 <li>
                   <span>February 2024 - May 2024</span><br /><strong>
-                    Introduction to Cybersecurity Student
+                    Codepath Introduction to Cybersecurity Student
                   </strong>
                   <p>
                     A comprehensive introductory course on cybersecurity,
